[metadata]
name = seedbox
version = 2.1
author = shad7
author-email = kenny.shad7@gmail.com
summary = Seedbox Task Manager
home-page = https://pypi.python.org/pypi/SeedboxManager
download-url = https://github.com/shad7/seedbox/tarball/2.1
license = MIT
description-file =
    README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Internet
    Topic :: Multimedia
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    seedbox
data_files =
    etc/seedbox = etc/seedbox/*

[entry_points]
console_scripts =
    seedmgr = seedbox.manager:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

