[metadata]
name = SeedboxManager
version = 2.3.7
author = shad7
author-email = kenny.shad7@gmail.com
summary = Seedbox Task Manager
home-page = https://pypi.python.org/pypi/SeedboxManager
license = MIT
description-file =
    README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Internet
    Topic :: Multimedia
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    seedbox
data_files =
    etc/seedbox = etc/seedbox/*

[entry_points]
console_scripts =
    seedmgr = seedbox.cli:main
    dbadmin = seedbox.db.admin:run

seedbox.tasks =
    filecopy = seedbox.tasks.filecopy:CopyFile
    fileunrar = seedbox.tasks.fileunrar:UnrarFile
    filesync = seedbox.tasks.filesync:SyncFile
    filedelete = seedbox.tasks.filedelete:DeleteFile

seedbox.db =
    sqlite = seedbox.db.sqlalchemy.api:Connection

oslo.config.opts =
    seedbox = seedbox.options:list_opts
    seedbox.db = seedbox.db:list_opts
    seedbox.process = seedbox.process:list_opts
    seedbox.task = seedbox.tasks:list_opts
    seedbox.torrent = seedbox.torrent:list_opts

[build_sphinx]
builders=html
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
