[metadata]
name = SeedboxManager
version = 2.3.15
author = shad7
author-email = kenny.shad7@gmail.com
summary = Seedbox Task Manager
home-page = http://shad7.github.io/seedbox
license = MIT
keywords = rsync, seedbox, task, parallel
description-file =
    README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Multimedia
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    seedbox
data_files =
    etc/seedbox = etc/seedbox/*

[entry_points]
console_scripts =
    seedmgr = seedbox.cli:main
    dbadmin = seedbox.db.admin:cli

seedbox.tasks =
    filecopy = seedbox.tasks.filecopy:CopyFile
    fileunrar = seedbox.tasks.fileunrar:UnrarFile
    filesync = seedbox.tasks.filesync:SyncFile
    filedelete = seedbox.tasks.filedelete:DeleteFile

seedbox.db =
    sqlite = seedbox.db.sqlalchemy.api:Connection

oslo.config.opts =
    seedbox = seedbox.options:list_opts

[build_sphinx]
builders=html
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
skip_authors = 1
autodoc_index_modules = 1
# temporary until fnmatch feature is released in next version
autodoc_exclude_modules =
        seedbox.db.sqlalchemy.migrate_repo.manage
        seedbox.db.sqlalchemy.migrate_repo.versions.001_initial_tables
        seedbox.db.sqlalchemy.migrate_repo.versions.002_migrate_to_V2_of_tables
        seedbox.db.sqlalchemy.migrate_repo.versions.003_drop_V1_tables
        seedbox.db.sqlalchemy.migrate_repo.versions.004_alter_total_time_column_on_MediaFile
        seedbox.tests.common.test_timeutil
        seedbox.tests.common.test_tools
        seedbox.tests.db.sqlalchemy.test_api
        seedbox.tests.db.sqlalchemy.test_migration
        seedbox.tests.db.sqlalchemy.test_model_util
        seedbox.tests.db.sqlalchemy.test_models
        seedbox.tests.db.sqlalchemy.test_session
        seedbox.tests.db.test_api
        seedbox.tests.db.test_exception
        seedbox.tests.db.test_maintenance
        seedbox.tests.db.test_models
        seedbox.tests.process.test_flow
        seedbox.tests.process.test_manager
        seedbox.tests.process.test_process
        seedbox.tests.process.test_workflow
        seedbox.tests.tasks.test_filecopy
        seedbox.tests.tasks.test_filedelete
        seedbox.tests.tasks.test_filesync
        seedbox.tests.tasks.test_fileunrar
        seedbox.tests.tasks.test_subprocessext
        seedbox.tests.tasks.test_tasks
        seedbox.tests.test
        seedbox.tests.test_cli
        seedbox.tests.test_gen_config
        seedbox.tests.test_options
        seedbox.tests.test_service
        seedbox.tests.test_version
        seedbox.tests.torrent.test_bencode
        seedbox.tests.torrent.test_loader
        seedbox.tests.torrent.test_parser

